--- a/gradle/publish-module.gradle
+++ b/gradle/publish-module.gradle
@@ -51,29 +51,16 @@ afterEvaluate {
 
                 artifact androidSourcesJar
                 artifact javadocJar
+            }
+        }
 
-                pom {
-                    name = PUBLISH_ARTIFACT_ID
-                    description = 'Courier'
-                    url = 'https://github.com/gojek/courier-android'
-                    licenses {
-                        license {
-                            name = 'Courier License'
-                            url = 'https://github.com/gojek/courier-android/blob/main/LICENSES/LICENSE'
-                        }
-                    }
-                    developers {
-                        developer {
-                            id = 'deepanshu'
-                            name = 'Deepanshu'
-                            email = 'deepanshu@gojek.com'
-                        }
-                    }
-                    scm {
-                        connection = 'scm:git:github.com/gojek/courier-android.git'
-                        developerConnection = 'scm:git:ssh://github.com/gojek/courier-android.git'
-                        url = 'https://github.com/gojek/courier-android/tree/main'
-                    }
+        repositories {
+            maven {
+                name = "ShareChatPackages"
+                url = uri("https://maven.pkg.github.com/ShareChat/paho.mqtt.android")
+                credentials {
+                    username = System.getenv("GITHUB_USERNAME") ?: "${guser}"
+                    password = System.getenv("GITHUB_PACKAGE_KEY") ?: "${gtoken}"
                 }
             }
         }
