--- a/gradle/script-ext.gradle
+++ b/gradle/script-ext.gradle
@@ -1,5 +1,5 @@
 ext {
-    gitVersionCode = grgit.tag.list().size()
-    gitVersionName = grgit.describe(tags: true, always: true)
+    gitVersionCode = ""//grgit.tag.list().size()
+    gitVersionName = "0.1.0"//grgit.describe(tags: true, always: true)
     println("version : $gitVersionName")
 }
